force-app/main/default/objects/SIS_Higher_Education_Institution__c/SIS_Higher_Education_Institution__c.object-meta.xml
<CustomObject>
    <label>Etablissement d&apos;enseignement supérieur</label>
    <nameField>
        <label>Higher Education Institution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Etablissements d&apos;enseignement supérieur</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>