force-app/main/default/objects/SIS_Higher_Education_Institution__c/fields/SIS_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>SIS_Identification_Number__c</fullName>
    <inlineHelpText>Si l&apos;établissement d&apos;enseignement supérieur est étranger alors veuillez renseigner le numéro d&apos;identification.</inlineHelpText>
    <label>Identification Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>