force-app/main/default/objects/SIS_Higher_Education_Institution__c/fields/SIS_LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>SIS_LegalEntity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>SIS_Legal_Entity__c</referenceTo>
    <relationshipLabel>Higher Education Institutions</relationshipLabel>
    <relationshipName>HigherEducationInstitutions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>