force-app/main/default/objects/SIS_Higher_Education_Institution__c/fields/SIS_UAI__c.field-meta.xml
<CustomField>
    <fullName>SIS_UAI__c</fullName>
    <inlineHelpText>Si l&apos;établissement d&apos;enseignement supérieur est français alors veuillez renseigner le code UAI.</inlineHelpText>
    <label>UAI</label>
    <length>30</length>
    <type>Text</type>
</CustomField>