force-app/main/default/objects/SIS_Higher_Education_Institution__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SIS_LegalEntity__c</columns>
    <columns>SIS_UAI__c</columns>
    <columns>SIS_Identification_Number__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>